refactor: convert more files

--- a/templates/contest/create-announcement.html
+++ b/templates/contest/create-announcement.html
@@ -2,7 +2,7 @@
 
 {% block media %}
     {{ form.media.css }}
-    <link rel="stylesheet" type="text/css" href="/resources/ui_form.css">
+    <link rel="stylesheet" type="text/css" href="{{ static('ui_form.css') }}">
 {% endblock %}
 
 {% block js_media %}
