--- a/templates/contest/edit.html
+++ b/templates/contest/edit.html
@@ -2,72 +2,21 @@
 
 {% block js_media %}
     {% include "leave-warning.html" %}
-    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <script type="text/javascript">
         window.django = {jQuery: $};
     </script>
-
-    <script>
-        // This code activates flatpickr on fields with the 'datetimefield' class when the document has loaded
-        window.addEventListener("DOMContentLoaded", () => {
-            flatpickr(".datetimefield", {
-                enableTime: true,
-                enableSeconds: true,
-                dateFormat: "Y-m-d H:i:S",
-                time_24hr: true,
-            });
-        });
-    </script>
-
-    <script src="{{ static('vnoj/jquery.formset.js') }}"></script>
-    <script type="text/javascript">
-        $(() => {
-            $('#form_set tr').formset({
-                prefix: '{{ contest_problem_formset.prefix }}'
-            });
-
-            const noResults = () => {
-                return "{{ _('Press Enter to select multiple users...') }}";
-            };
-
-            $(document).one('click', '#id_private_contestants + .select2', (e) => {
-                $('#id_private_contestants').data().select2.options.get('translations').dict['noResults'] = noResults;
-            });
-
-            $(document).on('keyup', '#id_private_contestants + .select2 .select2-search__field', (e) => {
-                if (e.keyCode === 13) {
-                    const $id_private_contestants = $('#id_private_contestants');
-                    const contestants = $(this).val().split(/[\s,]+/);
-                    if (contestants.length <= 1) {
-                        // Skip to let select2 handle this
-                        return;
-                    }
-
-                    $.ajax({
-                        type: 'GET',
-                        url: $id_private_contestants.data().select2.dataAdapter.ajaxOptions.url,
-                        data: {
-                            multiple_terms: contestants,
-                        },
-                        success(response) {
-                            for (const contestant of response.results) {
-                                $id_private_contestants.select2('trigger', 'select', {
-                                    data: contestant,
-                                });
-                            }
-                        },
-                    });
-                }
-            });
-        })
-    </script>
+    <script 
+        src="{{ static('contest/edit.js') }}"
+        data-contest-problem-formset-prefix="{{ contest_problem_formset.prefix }}"
+        data-i18n-ent-to-sel-mul-users="{{ _('Press Enter to select multiple users...') }}"
+    ></script>
     {{ form.media.js }}
 {% endblock %}
 
 {% block media %}
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     {{ form.media.css }}
-    <link rel="stylesheet" type="text/css" href="/resources/ui_form.css">
+    <link rel="stylesheet" type="text/css" href="{{ static('ui_form.css') }}">
 {% endblock %}
 
 {% block body %}
