--- a/templates/comments/base-media-js.html
+++ b/templates/comments/base-media-js.html
@@ -12,4 +12,6 @@
     data-i18n-confirm-hide-comment="{{ _('Are you sure you want to hide this comment?') }}"
     data-i18n-failed-to-hide-comment="{{ _('Could not hide comment.') }}"
     data-i18n-failed-to-update-comment-body="{{ _('Failed to update comment body.') }}"
+    data-i18n-original="{{ _('original') }}"
+    data-i18n-edited="{{ _('edited') }}"
 ></script>
