--- a/templates/comments/math.html
+++ b/templates/comments/math.html
@@ -1,3 +1,3 @@
 {% compress js, inline %}
-    <script src="/resources/pagedown_math.js"></script>
+    <script src="{{ static('bundled/pagedown-math.js') }}"></script>
 {% endcompress %}
