--- a/templates/contest/edit.html
+++ b/templates/contest/edit.html
@@ -6,7 +6,7 @@
         window.django = {jQuery: $};
     </script>
     <script 
-        src="{{ static('contest/edit.js') }}"
+        src="{{ static('bundled/contest/edit.js') }}"
         data-contest-problem-formset-prefix="{{ contest_problem_formset.prefix }}"
         data-i18n-ent-to-sel-mul-users="{{ _('Press Enter to select multiple users...') }}"
     ></script>
