--- a/templates/contest/media-js.html
+++ b/templates/contest/media-js.html
@@ -1,5 +1,5 @@
 <script
-    src="{{ static('contest/media-js.js') }}"
+    src="{{ static('bundled/contest/media-js.js') }}"
     data-official-contest-mode="{{ 'true' if request.official_contest_mode else 'false' }}"
     data-in-contest="{{ 'true' if request.in_contest else 'false' }}"
     data-i18n-confirm-leave="{{ _('Are you sure you want to leave?') }}"
