--- a/templates/home.html
+++ b/templates/home.html
@@ -12,8 +12,10 @@
         {
             "@context": "https://schema.org",
             "@type": "WebSite",
+            "url": "{{ DMOJ_SCHEME }}://{{ site.domain }}/",
             "potentialAction": {
                 "@type": "SearchAction",
+                "target": "{{ DMOJ_SCHEME }}://{{ site.domain }}/problems/?search={search_term_string}",
                 "query-input": "required name=search_term_string"
             }
         }
