--- a/templates/contest/moss.html
+++ b/templates/contest/moss.html
@@ -21,16 +21,11 @@
 {% endblock %}
 
 {% block content_js_media %}
-    <script type="text/javascript">
-        $(() => {
-            $('.contest-moss').click(() => {
-                return confirm("{{ _('Are you sure you want to MOSS the contest?') }}");
-            });
-            $('.contest-moss-delete').click(() => {
-                return confirm("{{ _('Are you sure you want to delete the MOSS results?') }}");
-            });
-        });
-    </script>
+    <script 
+        src="{{ static('bundled/contest/moss.js') }}" 
+        data-i18n-confirm-moss="{{ _('Are you sure you want to MOSS the contest?') }}"
+        data-i18n-confirm-delete-moss="{{ _('Are you sure you want to delete the MOSS results?') }}"
+    ></script>
 {% endblock %}
 {% block body %}
     {% if has_results %}
