--- a/templates/contest/official-ranking-table.html
+++ b/templates/contest/official-ranking-table.html
@@ -1,4 +1,4 @@
-<table id="{{ table_id }}" class="users-table table striped">
+<table {% if table_id %}id="{{ table_id }}"{% endif %} class="users-table table striped">
     <thead>
     <tr>
         <th class="header rank">{{ rank_header or _("Rank") }}</th>
