--- a/templates/submission/list.html
+++ b/templates/submission/list.html
@@ -228,7 +228,7 @@
                 });
 
                 var $body = $(document.body);
-                event_dispatcher.on('submissions', (message) => {
+                eventDispatcher.on('submissions', (message) => {
                         if (dynamic_user_id && message.user != dynamic_user_id ||
                             dynamic_problem_id && message.problem != dynamic_problem_id ||
                             dynamic_contest_id && message.contest != dynamic_contest_id)
@@ -247,7 +247,7 @@
                         }
                     }
                 );
-                event_dispatcher.onwsclose((event) => {
+                eventDispatcher.onwsclose((event) => {
                     if (event.code == 1001) {
                         console.log('Navigated away');
                         return;
