refactor: done contest/ranking

--- a/templates/base.html
+++ b/templates/base.html
@@ -99,7 +99,7 @@
             <script src="{{ static('prebundled/jquery-taphold.js') }}"></script>
             <script src="{{ static('prebundled/jquery.unveil.js') }}"></script>
             <script src="{{ static('prebundled/select2/select2.js') }}"></script>
-            <script src="{{ static('prebundled/moment.js') }}"></script>
+            <script src="{{ static('bundled/moment.js') }}"></script>
             <script src="{{ static('bundled/common.js') }}"></script>
             <script 
                 src="{{ static('bundled/base/init.js') }}"
