refactor: converted more files

--- a/templates/base.html
+++ b/templates/base.html
@@ -229,10 +229,10 @@
                         </span>
                     </a>
                     <button id="flag_vi" style="margin-right: 5px; margin-top: 4px" aria-label="EN">
-                        <img src="{{ static 'icons/vi_flag.svg' }}" alt="" height="24" />
+                        <img src="{{ static('icons/vi_flag.svg') }}" alt="" height="24" />
                     </button>
                     <button id="flag_en" style="margin-right: 5px; margin-top: 4px" aria-label="VI">
-                        <img src="{{ static 'icons/gb_flag.svg' }}" alt="" height="24" />
+                        <img src="{{ static('icons/gb_flag.svg') }}" alt="" height="24" />
                     </button>
                     {% if request.user.is_authenticated %}
                         <ul>
