--- a/templates/stats/media-js.html
+++ b/templates/stats/media-js.html
@@ -1,273 +1,1 @@
-<script type="module">
-    import "$prebundled/chart.js/Chart.js";
-
-    function draw_pie_chart(data, $chart) {
-        const ctx = $chart.find('canvas')[0].getContext('2d');
-        const chart = new Chart(ctx, {
-            type: 'pie',
-            data: data,
-            options: {
-                maintainAspectRatio: false,
-                responsive: false,
-                animation: false,
-                legend: {
-                    position: 'right',
-                    labels: {
-                        fontColor: 'black',
-                        boxWidth: 20,
-                    },
-                },
-            },
-        });
-        return chart;
-    }
-
-    function draw_bar_chart(data, $chart, show_percentage = true) {
-        const orig_data = JSON.parse(JSON.stringify(data));
-        const ctx = $chart.find('canvas')[0].getContext('2d');
-        ctx.canvas.height = 20 * data.labels.length + 100;
-        const chart = new Chart(ctx, {
-            type: 'horizontalBar',
-            data: data,
-            options: {
-                maintainAspectRatio: false,
-                legend: {
-                    display: false,
-                },
-                tooltips: {
-                    callbacks: {
-                        label(tooltipItem, data) {
-                            return show_percentage ? ((Math.round(tooltipItem.value * 100) / 100) + '%') : tooltipItem.value;
-                        },
-                    },
-                },
-                scales: {
-                    xAxes: [{
-                        ticks: {
-                            min: 0,
-                        },
-                    }],
-                },
-                onClick(e) {
-                    let nearest = chart.getElementsAtEventForMode(e, 'nearest', {intersect: false, axis: 'y'});
-                    if (nearest.length) {
-                        var bar = nearest[0];
-                        var datasetIndex = bar._datasetIndex, index = bar._index;
-                        chart.data.datasets[datasetIndex].data[index] = !bar.hidden ? 0 : orig_data.datasets[datasetIndex].data[index];
-                        bar.hidden = !bar.hidden;
-                        chart.update();
-                    }
-                },
-            },
-        });
-        return chart;
-    }
-
-    function draw_vertical_bar_chart(data, $chart) {
-        const ctx = $chart.find('canvas')[0].getContext('2d');
-        const chart = new Chart(ctx, {
-            type: 'bar',
-            data: data,
-            options: {
-                maintainAspectRatio: false,
-                legend: {
-                    display: false,
-                },
-                scales: {
-                    xAxes: [{
-                        ticks: {
-                            min: 0,
-                        },
-                    }],
-                },
-            },
-        });
-        return chart;
-    }
-
-    function draw_stacked_bar_chart(data, $chart) {
-        const ctx = $chart.find('canvas')[0].getContext('2d');
-        ctx.canvas.height = 20 * data.labels.length + 100;
-        const chart = new Chart(ctx, {
-            type: 'horizontalBar',
-            data: data,
-            options: {
-                maintainAspectRatio: false,
-                tooltips: {
-                    mode: 'index',
-                    intersect: false,
-                    callbacks: {
-                        footer(tooltipItems) {
-                            let total = 0;
-                            for (let i = 0; i < tooltipItems.length; ++i) {
-                                total += tooltipItems[i].xLabel;
-                            }
-                            return 'Total: ' + total;
-                        },
-                    },
-                },
-                legend: {
-                    labels: {
-                        generateLabels(chart) {
-                            const data = chart.data;
-                            if (!Array.isArray(data.datasets)) {
-                                return [];
-                            }
-
-                            let total = 0;
-                            data.datasets.forEach((dataset, i) => {
-                                if (chart.isDatasetVisible(i)) {
-                                    total += dataset.data.reduce((a, b) => {
-                                        return a + b;
-                                    }, 0);
-                                }
-                            });
-
-                            const labels = data.datasets.map((dataset, i) => {
-                                return {
-                                    text: dataset.label,
-                                    fillStyle: (!Array.isArray(dataset.backgroundColor) ? dataset.backgroundColor : dataset.backgroundColor[0]),
-                                    hidden: !chart.isDatasetVisible(i),
-                                    lineCap: dataset.borderCapStyle,
-                                    lineDash: dataset.borderDash,
-                                    lineDashOffset: dataset.borderDashOffset,
-                                    lineJoin: dataset.borderJoinStyle,
-                                    lineWidth: dataset.borderWidth,
-                                    strokeStyle: dataset.borderColor,
-                                    pointStyle: dataset.pointStyle,
-                                    datasetIndex: i,
-                                };
-                            }, this);
-
-                            labels.push({
-                                text: 'Total: ' + total,
-                                fillStyle: 'transparent',
-                                strokeStyle: 'transparent',
-                                datasetIndex: -1,
-                            });
-
-                            return labels;
-                        },
-                    },
-                    onClick(e, legendItem) {
-                        const index = legendItem.datasetIndex;
-                        if (index == -1) return;
-                        const ci = this.chart;
-                        const meta = ci.getDatasetMeta(index);
-
-                        meta.hidden = meta.hidden === null ? !ci.data.datasets[index].hidden : null;
-
-                        ci.update();
-                    },
-                },
-                scales: {
-                    xAxes: [{
-                        stacked: true,
-                        ticks: {
-                            min: 0,
-                        },
-                    }],
-                    yAxes: [{
-                        stacked: true,
-                    }],
-                },
-            },
-        });
-        return chart;
-    }
-
-    function draw_vertical_stacked_bar_chart(data, $chart, display_y_right_axis = false) {
-        const ctx = $chart.find('canvas')[0].getContext('2d');
-        ctx.canvas.height = 20 * data.labels.length + 100;
-        const chart = new Chart(ctx, {
-            type: 'bar',
-            data: data,
-            options: {
-                maintainAspectRatio: false,
-                tooltips: {
-                    mode: 'index',
-                    intersect: false,
-                    callbacks: {
-                        footer(tooltipItems) {
-                            let total = 0;
-                            for (let i = 0; i < tooltipItems.length; ++i) {
-                                total += tooltipItems[i].yLabel;
-                            }
-                            return 'Total: ' + total;
-                        },
-                    },
-                },
-                legend: {
-                    labels: {
-                        generateLabels(chart) {
-                            const data = chart.data;
-                            if (!Array.isArray(data.datasets)) {
-                                return [];
-                            }
-
-                            let total = 0;
-                            data.datasets.forEach((dataset, i) => {
-                                if (chart.isDatasetVisible(i)) {
-                                    total += dataset.data.reduce((a, b) => {
-                                        return a + b;
-                                    }, 0);
-                                }
-                            });
-
-                            const labels = data.datasets.map((dataset, i) => {
-                                return {
-                                    text: dataset.label,
-                                    fillStyle: (!Array.isArray(dataset.backgroundColor) ? dataset.backgroundColor : dataset.backgroundColor[0]),
-                                    hidden: !chart.isDatasetVisible(i),
-                                    lineCap: dataset.borderCapStyle,
-                                    lineDash: dataset.borderDash,
-                                    lineDashOffset: dataset.borderDashOffset,
-                                    lineJoin: dataset.borderJoinStyle,
-                                    lineWidth: dataset.borderWidth,
-                                    strokeStyle: dataset.borderColor,
-                                    pointStyle: dataset.pointStyle,
-                                    datasetIndex: i,
-                                };
-                            }, this);
-
-                            labels.push({
-                                text: 'Total: ' + total,
-                                fillStyle: 'transparent',
-                                strokeStyle: 'transparent',
-                                datasetIndex: -1,
-                            });
-
-                            return labels;
-                        },
-                    },
-                    onClick(e, legendItem) {
-                        const index = legendItem.datasetIndex;
-                        if (index == -1) return;
-                        const ci = this.chart;
-                        const meta = ci.getDatasetMeta(index);
-
-                        meta.hidden = meta.hidden === null ? !ci.data.datasets[index].hidden : null;
-
-                        ci.update();
-                    },
-                },
-                scales: {
-                    xAxes: [{
-                        stacked: true,
-                        ticks: {
-                            min: 0,
-                        },
-                    }],
-                    yAxes: [{
-                        stacked: true,
-                    }, {
-                        id: 'yRightAxis',
-                        position: 'right',
-                        display: display_y_right_axis,
-                    }],
-                },
-            },
-        });
-        return chart;
-    }
-</script>
+<script src="{{ static('bundled/stats/media-js.js') }}"></script>
