--- a/templates/organization/home.html
+++ b/templates/organization/home.html
@@ -37,18 +37,13 @@
 
 {% block js_media %}
     {% include "blog/media-js.html" %}
-    <script type="text/javascript" data-is-org-open="{{ organization.is_open }}">
-        const isOrgOpen = document.currentScript.dataset.isOrgOpen === "True";
-        $(() => {
-            $('.leave-organization').click(() => {
-                return confirm("{{ _('Are you sure you want to leave this organization?') }}\n" +
-                    isOrgOpen
-                        ? "{{ _('You will have to rejoin to show up on the organization leaderboard.') }}"
-                        : "{{ _('You will have to request membership in order to join again.') }}",
-                );
-            });
-        });
-    </script>
+    <script 
+        src="{{ static('bundled/organization/home.js') }}"
+        data-is-org-open="{{ 'true' if organization.is_open else 'false' }}"
+        data-i18n-confirm-leave="{{ _('Are you sure you want to leave this organization?') }}"
+        data-i18n-warn-rejoin-to-show-up="{{ _('You will have to rejoin to show up on the organization leaderboard.') }}"
+        data-i18n-warn-request-membership-to-join="{{ _('You will have to request membership in order to join again.') }}"
+    ></script>
 {% endblock %}
 
 {% block title_row %}
