--- a/templates/task_status.html
+++ b/templates/task_status.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Task Progress - {{ SITE_LONG_NAME }}</title>
-    <link rel="stylesheet" href="/resources/task_status.css">
-    <script src="/resources/prebundled/jquery-3.4.1.min.js"></script>
+    <link rel="stylesheet" href="{{ static('task_status.css') }}">
+    <script src="{{ static('prebundled/jquery-3.4.1.min.js') }}"></script>
     <script type="module">
         $(() => {
             const $jumbotron = $('.jumbotron');
@@ -77,7 +77,7 @@
 <div class="container">
     <div class="jumbotron" data-task-id="{{ task_id }}" data-task-status="{{ task_status }}"
          data-redirect="{{ redirect }}">
-        <img src="/resources/icons/icon.svg" class="icon" alt="DMOJ Icon">
+        <img src="{{ static('icons/icon.svg') }}" class="icon" alt="DMOJ Icon">
         <p class="action">{{ message }}</p>
         <p class="stage"></p>
 
