--- a/templates/leave-warning.html
+++ b/templates/leave-warning.html
@@ -1,4 +1,1 @@
-<script 
-    src="{{ static('bundled/leave-warning.js') }}"
-    data-i18n-leaving-message="{{ _('Changes you made may not be saved.') }}"
-></script>
+<script src="{{ static('bundled/leave-warning.js') }}"></script>
