--- a/templates/blog/edit.html
+++ b/templates/blog/edit.html
@@ -2,10 +2,7 @@
 
 {% block js_media %}
     {% include "leave-warning.html" %}
-    <script 
-        src="{{ static('bundled/blog/edit/warning.js') }}"
-        data-i18n-confirm-delete-blog="{{ _('Are you sure you want to delete this blog post?') }}"
-    ></script>
+    <script src="{{ static('bundled/blog/edit/warning.js') }}"></script>
     {{ form.media.js }}
 {% endblock %}
 
